--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
 *~
-.venv
-__pycache__
-*.pdf
+.*~
+__pycache__/
+*.pyc
+*.pyo
+*.egg-info/
+dist/
+.build/
+.venv/
+.env/
+.cache/
+.env
+.mypy_cache
+.ropeproject/
