--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [{ name = "Franck Barbenoire", email = "fbarbenoire@gmail.com" }]
 readme = "README.rst"
 requires-python = ">=3.11"
 dependencies = [
-    "aiohttp==3.11.16",
+    "aiohttp==3.11.18",
     "python-dateutil==2.9.0.post0",
     "matplotlib==3.10.1"
 ]
@@ -17,8 +17,8 @@ keywords = ["home automation", "graph"]
 Homepage = "https://github.com/domotik-or/graph"
 
 [build-system]
-requires = ["setuptools>=75.0"]
-build-backend = "setuptools.build_meta"
+requires = ["flit_core >=3.9.0,<4"]
+build-backend = "flit_core.buildapi"
 
 [project.scripts]
 graph = "graph.main:main"
@@ -28,9 +28,3 @@ python_version = 3.11
 warn_return_any = true
 warn_unused_configs = true
 ignore_missing_imports = true
-
-[tool.setuptools.packages.find]
-where = ["src"]
-
-[tool.setuptools.dynamic]
-version = {attr = "graph.main.__version__"}
